# ascii-camera

./: .gitignore  README.md  pyproject.toml
ascii_cam/: ascii_renderer.py  camera.py  main.py  prototype.py  ui.py
ascii_cam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
matrix_cam/: __init__.py  ascii_renderer.py  glitch.py  main.py  segmentation.py  ui.py
tests/: test_ascii_renderer.py  test_glitch_engine.py  test_main_cli.py  test_segmentation.py
