[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-cam"
version = "0.1.0"
description = "Curses-based ASCII camera viewer for macOS terminals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = ["mediapipe>=0.10"]

[project.scripts]
matrix-cam = "matrix_cam.main:run"
matrix-cam-prototype = "matrix_cam.prototype:main"
